src/themes/default/src/scss/_inpage-navigation.scss
.bcl-sidebar:has(> .bcl-inpage-navigation) {
  position: sticky;
  top: 0;
}
.bcl-inpage-navigation {
  top: 0;
  background-color: $gray-100;

  .dropdown-toggle {
    display: flex;
    justify-content: space-between;
    align-items: center;
    white-space: normal;
    border-bottom: 1px solid $gray-300;
    &:after {
      display: none;
    }
    .bi {
      transition: 0.3s ease;
    }
    &.show {
      .bi {
        transform: rotate(180deg);
      }
    }
  }

  .dropdown-menu {
    position: relative;
    background-color: $gray-100;
    width: 100%;
    top: 100% !important;
    border: none;
    border-radius: 0;
    transform: none !important;
  }

  .bcl-heading {
    margin-bottom: 0;
    padding: map-get($spacers, "3-5");
  }
  ul {
    padding: map-get($spacers, "2-5");

    .nav-link {
      padding: map-get($spacers, 2);
      margin-bottom: map-get($spacers, 2);
      &:not(.active) {
        &:hover {
          text-decoration-line: underline;
          text-decoration-color: currentColor;
        }
      }
    }

    ul {
      padding: 0 map-get($spacers, "2-5");
    }
  }
}

@include media-breakpoint-down(sm) {
  .bcl-sidebar:has(> .bcl-inpage-navigation) {
    padding-left: 0;
    padding-right: 0;
  }
}

@include media-breakpoint-down(lg) {
  .bcl-sidebar:has(> .bcl-inpage-navigation) {
    padding-bottom: map-get($spacers, 3);
  }
}

@include media-breakpoint-up(md) {
  .bcl-inpage-navigation {
    display: block;
    top: map-get($spacers, 3);
    .dropdown-toggle {
      cursor: auto;
      &::after {
        display: none;
      }
      .bi {
        display: none;
      }
    }
    .dropdown-menu {
      position: relative !important;
      background: transparent;
      padding: 0;
      display: block;
    }
  }
}

